完成服务者消费者测试&暂时屏蔽security组件

--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -1,5 +1,11 @@
+server:
+  port: 8081
+  servlet:
+    context-path: /v1
 spring:
+  application:
+    name: consumer
   cloud:
     nacos:
-      config:
+      discovery:
         server-addr: 172.16.49.66:8848
