--- a/provider/src/main/resources/application.yml
+++ b/provider/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
     nacos:
       discovery:
         server-addr: 172.16.49.66:8848
+  sentinel:
+    transport:
+      port: 8719
+      dashboard: localhost:8080
