--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	compile group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-discovery', version: '2.2.0.RELEASE'
 	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
 	compile group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-sentinel', version: '2.2.0.RELEASE'
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: '3.0.3.RELEASE'
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.0.3.RELEASE'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
