--- a/provider/build.gradle
+++ b/provider/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	compile group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-config', version: '2.2.0.RELEASE'
 	compile group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-discovery', version: '2.2.0.RELEASE'
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: '3.0.3.RELEASE'
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.0.3.RELEASE'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
