--- a/provider/src/main/resources/application.yml
+++ b/provider/src/main/resources/application.yml
@@ -15,6 +15,17 @@ spring:
     nacos:
       discovery:
         server-addr: 172.16.49.66:8848
+    stream:
+      bindings:
+        alarm_input:
+          destination: alarm_topic
+          binder: kafka
+          group: alarm_group
+      kafka:
+        binder:
+          brokers: 172.16.49.41:9092
+          zkNodes: 172.16.49.41:2181
+          requiredAcks: 1
   sentinel:
     transport:
       port: 8719
