增加对kafka消息队列的支持

--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -21,13 +21,13 @@ spring:
         dashboard: localhost:8080
     stream:
       bindings:
-#        alarm_input:
-#          destination: alarm_topic
-#          binder: kafka
-#          group: alarm_group
-        alarm_output:
+        alarm_input:
           destination: alarm_topic
           binder: kafka
+          group: alarm_group
+#        alarm_output:
+#          destination: alarm_topic
+#          binder: kafka
       kafka:
         binder:
           brokers: 172.16.49.41:9092
